[gd_scene load_steps=3 format=3 uid="uid://dpskvver0df1c"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_cogtd"]
[ext_resource type="Texture2D" uid="uid://c4hvxnkiy5pho" path="res://Art/OIG3 (1).jpg" id="2_maeap"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cogtd")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00434028
anchor_top = -0.783951
anchor_right = 1.00608
anchor_bottom = 1.37654
offset_top = 188.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_maeap")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 536.742
offset_top = 246.473
offset_right = 606.742
offset_bottom = 347.473
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Upgrades" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Upgrades"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

<<<<<<< Updated upstream
=======
[node name="Music" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music"
icon = ExtResource("3_mcf6i")

[node name="Story" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Story"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("4_t0fos")]
volume_db = -18.162
bus = &"Music"

[node name="Select" parent="." instance=ExtResource("4_t0fos")]
stream = ExtResource("5_yjp80")
volume_db = -36.667
bus = &"Music"

>>>>>>> Stashed changes
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
<<<<<<< Updated upstream
=======
[connection signal="pressed" from="MarginContainer/VBoxContainer/Music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Story" to="." method="_on_story_pressed"]
>>>>>>> Stashed changes
